# logcat-colorize

./: .gitignore  .gitmodules  CMakeLists.txt  project.properties
.github/workflows/: cmake.yml
cmake-scripts/: cpack.cmake  read_configuration.cmake
examples/: filter.json
src/: Printer.cpp  Printer.h  main.cpp
src/filter/: Filter.cpp  Filter.h  FilterFactory.cpp  FilterFactory.h
src/filter/matchers/: CompoundMatcher.cpp  CompoundMatcher.h  LogLevelMatcher.cpp  LogLevelMatcher.h  Matcher.h  MessageMatcher.cpp  MessageMatcher.h  PidMatcher.cpp  PidMatcher.h  TagMatcher.cpp  TagMatcher.h  TextualMatcher.cpp  TextualMatcher.h  TimestampMatcher.cpp  TimestampMatcher.h
src/logcat/: LogcatEntry.cpp  LogcatEntry.h  LogcatParser.cpp  LogcatParser.h
src/utils/: Utils.cpp  Utils.h
